Thu Apr 22 20:46:25 UTC 2010  Trevor Fields  <fields_t@ociweb.com>

        * bin/performance_tests.lst:
        * performance-tests/Bench/tests/latency/run_test.pl:
        * performance-tests/Bench/tests/thru/run_test.pl:

          Added running of throughput tests and corrected directory names.

Thu Apr 22 18:16:27 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/extract-latency.pl:
        * performance-tests/Bench/bin/reduce-latency-data.pl:

          Added median and median absolute deviation (MAD) statistics
          gathering.

        * performance-tests/Bench/bin/run_test:

          Factored the filtering closures out and made them selectable by
          OS type.

Wed Apr 21 19:25:35 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/src/testprocess.cpp:

          Added static initialization feature for static builds.

Mon Apr 19 23:50:09 UTC 2010  Trevor Fields  <fields_t@ociweb.com>

        * performance-tests/Bench/tests/latency/run_test.pl:
        * performance-tests/Bench/tests/thru/run_test.pl:

          Adjusted to have the run_test on the server side handle the repo.
          Running the repo as a separate run_test was leaving cases of the repo
          still running after terminating the run_test.

Mon Apr 19 19:19:09 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/extract-throughput.pl:

          Adjusted to produce a single data file with the test and
          transport data partitioned into separate indices.

        * performance-tests/Bench/bin/plot-density.gp:
        * performance-tests/Bench/bin/plot-quantiles.gp:

          Candidate plotting commands for Quantile and Kernel Density
          Estimation charts.  These currently assume specific file names
          and locations.

        * performance-tests/Bench/tests/thru/test-commands.txt:

          Updated to generate output files useful for the current